# CG_Demo

./: .gitignore  CMakeLists.txt
BaseOpenGL/: Buffer.hpp  Camera.hpp  Frame.hpp  FrameBuffer.hpp  GLWidget.hpp  Input.hpp  Mesh.hpp  Model copy.hpp  Model.hpp  PostRender.hpp  PrecomputedRender.hpp  QuadRender.hpp  README.md  Shader.hpp  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram.hpp  Shape.hpp  Texture.hpp  TextureAttributes.hpp  UUID.hpp  Vertex.cpp  Vertex.h  VertexArray.hpp  glHelper.hpp  utility.hpp
SceneDescription/: Light.hpp
glsl/bloom/: bloom.fs  bloom.vs  mixture.fs  test.fs
glsl/deferred/: box.fs  render.fs
glsl/frame/: framebuffers.fs  framebuffers_screen.fs
glsl/geometry/: geo.fs  geo.gs  geo.vs
glsl/ibl/: final_pbr.fs  pbr.fs
glsl/instance/: quad.vs  universe_instance.vs
glsl/lighting/: lighting.fs  lighting.vs
glsl/model/: model.fs
glsl/pbr/: geometry.vs  light.fs  map.fs  point_cook_torrance.fs
glsl/playground/: basic.fs  bp.fs  gui.fs  gui.vs  trans.vs
glsl/shadow/: point_shadows.fs  shadow.fs  shadow.vs
glsl/skybox/: env_refract.fs
glsl/test/: backup.fs  cube.fs  cube.vs  test.fs  triangle.vs
glsl/texture_map/: brick.fs  brick.vs
glsl/uniform/: uniform_block.vs
src/IBL/: README.md  main.cpp
src/bloom/: main.cpp
src/cubemap/: main.cpp
src/deferred/: main.cpp
src/frame/: main.cpp
src/gamma/: main.cpp
src/geometry/: main.cpp
src/instance/: main.cpp
src/lighting/: main.cpp
src/model/: main.cpp
src/pbr/: Sphere.hpp  main.cpp
src/playground/: ShadowScene.hpp  main.cpp
src/shadow/: ShadowScene.hpp  (+1 more)
(+8 files in other folders)
